--- a/index.html
+++ b/index.html
@@ -4,28 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Título</h1>
-    <h2>Título</h2>
-    <h3>Título</h3>
-    <h4>Título</h4>
-    <h5>Título</h5>
-    <h6>Título</h6>
-    <p>Parágrafo 1</p>
-    <p>Parágrafo 2</p>
-    <a href="https://github.com/gabiqueiroga1/site-html">Ir para o site</a>
+    <div class = section>
+        <h1>AAAAAOBA</h1>
+        <p class="">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis veniam temporibus soluta nemo ipsa odio tempore maiores, sit ratione vel quae reprehenderit iure porro aliquam eveniet ea blanditiis sint a.</p>
+        <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos atque mollitia beatae eius at possimus sunt ut quam blanditiis facilis fuga enim commodi suscipit ex minus, ab totam! Dolore, sunt?</p>
+    </div>
+    
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSxM_f2WHVF5jOQCP2n1BEs2RTHE2uXHis4Xw&s" width="200px" height="200px"/>
-    <ul>
-        <li>café</li>
-        <li>pão</li>
-        <li>manteiga</li>
-    </ul>
-    <ol>
-        <li>café</li>
-        <li>pão</li>
-        <li>manteiga</li>
-    </ol>
 
 </body>
 </html>
